WarehouseDetailDemo