@@ -2,7 +2,7 @@ package controller;
 
 import jakarta.servlet.annotation.MultipartConfig;
 import dao.WarehouseImageDAO;
-import dao.WarehouseManagementDAO;
+import dao.WarehouseDAO;
 import java.io.IOException;
 import java.util.List;
 import jakarta.servlet.ServletException;
@@ -12,6 +12,7 @@ import java.io.File;
 import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 import model.Warehouse;
 import model.WarehouseImage;
 
@@ -23,7 +24,7 @@ import model.WarehouseImage;
 @WebServlet(name = "WarehouseController", urlPatterns = {"/warehouse"})
 public class WarehouseManagerController extends HttpServlet {
 
-    // ================== PHẦN GET (HIỂN THỊ DANH SÁCH) ==================
+    // ================== PHẦN GET (HIỂN THỊ & ĐIỀU HƯỚNG) ==================
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
@@ -35,16 +36,26 @@ public class WarehouseManagerController extends HttpServlet {
             return; 
         }
 
-        WarehouseManagementDAO dao = new WarehouseManagementDAO();
+        WarehouseDAO dao = new WarehouseDAO();
         String action = request.getParameter("action");
 
-        // --- Chuyển trang Form ADD ---
+        // --- ACTION: ADD ---
         if ("add".equals(action)) {
             request.getRequestDispatcher("/Management/warehouse-form.jsp").forward(request, response);
             return;
         }
 
-        // --- Chuyển trang Form EDIT ---
+        // ========================================================================
+        // --- ACTION: VIEW (SỬA ĐỔI: Chuyển tiếp sang WarehouseDetailController) ---
+        // ========================================================================
+        if ("view".equals(action)) {
+            // Thay vì xử lý ở đây, ta đẩy toàn bộ req/resp sang Servlet chi tiết
+            // Servlet kia (urlPatterns="/warehouse/detail") sẽ lo việc gọi DAO và forward ra JSP
+            request.getRequestDispatcher("/warehouse/detail").forward(request, response);
+            return;
+        }
+
+        // --- ACTION: EDIT ---
         if ("edit".equals(action)) {
             String idStr = request.getParameter("id");
             if (idStr != null) {
@@ -56,51 +67,43 @@ public class WarehouseManagerController extends HttpServlet {
             return;
         }
 
-        // --- LẤY DANH SÁCH (Bỏ phân trang server, bỏ sort thủ công) ---
+        // --- ACTION: LIST (MẶC ĐỊNH) ---
         List<Warehouse> list = dao.getAll();
         
-        // --- LỌC THEO STATUS (Giống User module: Lọc Server-side, còn Search/Sort để Client) ---
+        // Lọc theo Status
         String statusStr = request.getParameter("status");
         if (statusStr != null && !statusStr.isEmpty() && !statusStr.equals("All")) {
             try {
                 int status = Integer.parseInt(statusStr);
-                // Lọc bằng Stream Java (hoặc có thể viết hàm DAO riêng nếu muốn)
-                list = list.stream().filter(w -> w.getStatus() == status).toList();
-            } catch (NumberFormatException e) {
-                // Ignore lỗi ép kiểu
-            }
+                list = list.stream()
+                           .filter(w -> w.getStatus() == status)
+                           .collect(Collectors.toList());
+            } catch (NumberFormatException e) {}
         }
 
-        // --- TẠO MAP ẢNH ---
+        // Lấy ảnh đại diện
         Map<Integer, String> imageMap = new HashMap<>();
         WarehouseImageDAO imgDao = new WarehouseImageDAO();
-
-        for (Warehouse w : list) { // Duyệt hết list (không phải pageList nữa)
+        for (Warehouse w : list) { 
             String imgUrl = imgDao.getPrimaryImage(w.getWarehouseId());
             imageMap.put(w.getWarehouseId(), imgUrl);
         }
 
-        // --- GỬI DỮ LIỆU SANG JSP ---
+        // Gửi dữ liệu sang JSP danh sách
         request.setAttribute("warehouseImages", imageMap);
-        request.setAttribute("warehouseList", list); // Gửi toàn bộ list
-        request.setAttribute("filterStatus", statusStr); // Để giữ trạng thái dropdown
+        request.setAttribute("warehouseList", list); 
+        request.setAttribute("filterStatus", statusStr); 
 
         request.getRequestDispatcher("Management/warehouse.jsp").forward(request, response);
     }
 
-    // ================== PHẦN POST (GIỮ NGUYÊN KHÔNG ĐỔI) ==================
+    // (Đã xóa hàm handleViewDetails vì không còn cần thiết)
+
+    // ================== PHẦN POST (GIỮ NGUYÊN) ==================
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         
-        // ... (Giữ nguyên logic thêm/sửa/upload ảnh của bạn ở đây) ...
-        // Copy lại y nguyên phần doPost cũ vào đây nhé, vì logic đó không cần đổi.
-        // Để ngắn gọn mình không paste lại phần doPost cũ.
-        
-        // Chỉ lưu ý 1 điểm nhỏ: Sau khi xong thì redirect về trang danh sách:
-        // response.sendRedirect(request.getContextPath() + "/warehouse");
-        
-        // LOGIC POST CŨ CỦA BẠN:
         HttpSession session = request.getSession();
         if (session.getAttribute("user") == null) {
             response.sendRedirect("login");
@@ -112,7 +115,6 @@ public class WarehouseManagerController extends HttpServlet {
             String name = request.getParameter("name");
             String address = request.getParameter("address");
             String desc = request.getParameter("description");
-            
             int status = 1;
             try { status = Integer.parseInt(request.getParameter("status")); } catch (Exception e) {}
 
@@ -150,7 +152,7 @@ public class WarehouseManagerController extends HttpServlet {
                 return;
             }
 
-            WarehouseManagementDAO dao = new WarehouseManagementDAO();
+            WarehouseDAO dao = new WarehouseDAO();
             int currentWarehouseId = 0;
 
             if (idStr != null && !idStr.trim().isEmpty()) {
@@ -165,8 +167,10 @@ public class WarehouseManagerController extends HttpServlet {
                 String fileName = Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
                 String uniqueFileName = currentWarehouseId + "_" + System.currentTimeMillis() + "_" + fileName;
                 String uploadPath = request.getServletContext().getRealPath("/resources/warehouse/image");
+                
                 File uploadDir = new File(uploadPath);
                 if (!uploadDir.exists()) uploadDir.mkdirs();
+                
                 filePart.write(uploadPath + File.separator + uniqueFileName);
 
                 WarehouseImageDAO imgDao = new WarehouseImageDAO();
@@ -174,16 +178,20 @@ public class WarehouseManagerController extends HttpServlet {
                 img.setImageUrl(uniqueFileName);
                 img.setPrimary(true);
                 img.setStatus(1);
+                
                 String ext = "jpg";
                 if (fileName.contains(".")) {
                     ext = fileName.substring(fileName.lastIndexOf(".") + 1).toLowerCase();
                 }
                 img.setImageType(ext);
+                
                 Warehouse linkW = new Warehouse();
                 linkW.setWarehouseId(currentWarehouseId);
                 img.setWarehouse(linkW);
+                
                 imgDao.insertImage(img);
             }
+            
             response.sendRedirect(request.getContextPath() + "/warehouse");
 
         } catch (Exception e) {
@@ -192,4 +200,4 @@ public class WarehouseManagerController extends HttpServlet {
             request.getRequestDispatcher("/Management/warehouse-form.jsp").forward(request, response);
         }
     }
-}
+}   
